# vibe-haptic

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  biome.json  build.ts  bunfig.toml  package.json  tsconfig.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/commands/: release.md
hooks/: haptic-hook.js  hooks.json
native/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
native/__test__/: native.spec.ts
native/src/: lib.rs
src/: config.ts  haptic.ts  index.ts  patterns.ts  types.ts
src/claude/: hook.ts  index.ts
src/opencode/: index.ts  plugin.ts
tests/: integration.test.ts
